Add opens to micronaut and jackson. Set --add-opens in surefire maven build works if repeated without clean goal