@@ -72,6 +72,7 @@
                         <includes>
                             <include>%regex[.*]</include>
                         </includes>
+                        <argLine>--add-opens no.ssb.datasetaccess/no.ssb.datasetaccess=ALL-UNNAMED --add-opens no.ssb.datasetaccess/no.ssb.datasetaccess.access=ALL-UNNAMED --add-opens no.ssb.datasetaccess/no.ssb.datasetaccess.dataset=ALL-UNNAMED --add-opens no.ssb.datasetaccess/no.ssb.datasetaccess.role=ALL-UNNAMED --add-opens no.ssb.datasetaccess/no.ssb.datasetaccess.user=ALL-UNNAMED</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
